# Fourier-Series

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CNAME  Fourier-Series.js  Fourier-Series.wasm  README.md  index.html
cmake/: AutoCollect.cmake  CompileOptions.cmake
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/rlImGui/: CMakeLists.txt
source/: CMakeLists.txt  Function.h  config.hpp  main.cpp
source/gui/: drawing_input.cpp  drawing_input.hpp  gui.cpp  gui.hpp  settings.cpp  settings.hpp  settings.tpp
source/math/: math.h  math.hpp
source/renderers/: chart_renderer.cpp  chart_renderer.hpp  formula_renderer.cpp  formula_renderer.hpp  spectrum_renderer.cpp  spectrum_renderer.hpp  wave_renderer.cpp  wave_renderer.hpp
source/waves/: compute_params.hpp  compute_result.hpp  dft.cpp  dft.hpp  epicycle_step.hpp  formula_tex.cpp  formula_tex.hpp  full_wave_rectified_sine.cpp  full_wave_rectified_sine.hpp  function.h  half_wave_rectified_sine.cpp  half_wave_rectified_sine.hpp  harmonic_term.hpp  rectified_sine.cpp  rectified_sine.hpp  sawtooth.cpp  sawtooth.hpp  semicircle.cpp  semicircle.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp  wave.cpp  wave.hpp  wave_shape.hpp  wave_variant.cpp  wave_variant.hpp  wave_variant.tpp
source/waves/shapes/: ataturk_signature.cpp  ataturk_signature.hpp  cosine.cpp  cosine.hpp  full_wave_rectified_sine.cpp  full_wave_rectified_sine.hpp  half_wave_rectified_sine.cpp  half_wave_rectified_sine.hpp  heart.cpp  heart.hpp  parabolic.cpp  parabolic.hpp  pulse.hpp  sawtooth.cpp  sawtooth.hpp  semicircle.cpp  semicircle.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp  user_path.cpp  user_path.hpp
tests/: CMakeLists.txt  fourier_core_tests.cpp
